[package]
name = "rust_keylock_shell"
version = "0.11.0"
authors = ["aston <astonbitecode@gmail.com>"]
description = "Shell access to the rust-keylock. rust-keylock is a password manager with goals to be Secure, Simple to use, Portable and Extensible."
keywords = ["password", "manager", "safe", "encryption", "key"]
license = "GPL-3.0"
repository = "https://github.com/rust-keylock/rust-keylock-shell"
homepage = "https://rust-keylock.github.io/"
readme = "README.md"
categories = ["cryptography", "authentication"]
edition = "2018"

[badges]
travis-ci = { repository = "rust-keylock/rust-keylock-shell", branch = "master" }

[dependencies]
rust_keylock = "0.11"
log = "0.4"
fern = "0.5"
chrono = "0.4"
rpassword = "3.0"
webbrowser = "0.5"

[[bin]]
name = "rust-keylock"
path = "src/main.rs"