[package]
name = "rust_keylock_shell"
version = "0.15.1"
authors = ["aston <astonbitecode@gmail.com>"]
description = "Shell access to the rust-keylock. rust-keylock is a password manager with goals to be Secure, Simple to use, Portable and Extensible."
keywords = ["password", "manager", "safe", "encryption", "key"]
license = "GPL-3.0"
repository = "https://github.com/rust-keylock/rust-keylock-shell"
homepage = "https://rust-keylock.github.io/"
readme = "README.md"
categories = ["cryptography", "authentication"]
edition = "2021"

[badges]
travis-ci = { repository = "rust-keylock/rust-keylock-shell", branch = "master" }

[dependencies]
rust_keylock = "0.15"
log = "0.4"
fern = "0.6"
chrono = "0.4"
rpassword = "7.2"
webbrowser = "0.8"
termcolor = "1.4"

[[bin]]
name = "rust-keylock"
path = "src/main.rs"